# RustAuthorConsole

./: Cargo.toml  README.md  config.json
src/: lib.rs  main.rs
src/http/: api_server.rs  handlers.rs  mod.rs
src/models/: alvarium.rs  annotation.rs  mod.rs  reading.rs  subscription.rs
src/store/: annotation_store.rs  mod.rs  reading_store.rs
src/streams/: author.rs  message_retriever.rs  mod.rs
