[package]
name = "author-console"
version = "0.1.0"
authors = ["DyrellC <dyrell.chapman@iota.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
anyhow = { version = "1.0.26", default-features = false }
iota-streams = { git = "https://github.com/iotaledger/streams", rev = "f536a8e" }
rand = "0.7.3"
hyper = "0.13"
json = "0.12.4"
base64 = "0.13.0"
hex = "0.4.2"


#iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "iota-1.0" }

serde = {version="1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
